--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@
 services:
   oracle-db:
     image: container-registry.oracle.com/database/express:latest
-    container_name: oracle-demo
+    container_name: ligmus
     ports:
       - "1521:1521"
     environment:
       - ORACLE_PWD=ligmus
     volumes:
-      - oracle-data:/opt/oracle/oradata # Path for persistent data
+      - oracle-data:/opt/oracle/oradata
 volumes:
   oracle-data:
