--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
                 <version>2.18.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
